fuel-client/src/client/schema/snapshots/fuel_client__client__schema__tx__tests__dry_run_tx_gql_output.snap
---
source: fuel-client/src/client/schema/tx.rs
expression: query.query

---
mutation Mutation($_0: HexString!) {
  dryRun(tx: $_0) {
    rawPayload
  }
}

