fuel-client/src/client/schema/snapshots/fuel_client__client__schema__tx__tests__opaque_transaction_by_id_query_gql_output.snap
---
source: fuel-client/src/client/schema/tx.rs
expression: operation.query

---
query Query($_0: HexString256!) {
  transaction(id: $_0) {
    rawPayload
    receipts {
      rawPayload
    }
  }
}

