fuel-client/src/client/schema/snapshots/fuel_client__client__schema__tx__tests__transactions_connection_query_gql_output.snap
---
source: fuel-client/src/client/schema/tx.rs
expression: operation.query

---
query Query($_0: String, $_1: String, $_2: Int, $_3: Int) {
  transactions(after: $_0, before: $_1, first: $_2, last: $_3) {
    edges {
      cursor
      node {
        gasLimit
        gasPrice
        id
        inputColors
        inputContracts
        inputs {
          __typename
          ... on InputCoin {
            utxoId
            owner
            amount
            color
            witnessIndex
            maturity
            predicate
            predicateData
          }
          ... on InputContract {
            utxoId
            balanceRoot
            stateRoot
            contractId
          }
        }
        isScript
        outputs {
          __typename
          ... on CoinOutput {
            to
            amount
            color
          }
          ... on ContractOutput {
            inputIndex
            balanceRoot
            stateRoot
          }
          ... on WithdrawalOutput {
            to
            amount
            color
          }
          ... on ChangeOutput {
            to
            amount
            color
          }
          ... on VariableOutput {
            to
            amount
            color
          }
          ... on ContractCreated {
            contractId
          }
        }
        maturity
        receiptsRoot
        status {
          __typename
          ... on SubmittedStatus {
            time
          }
          ... on SuccessStatus {
            blockId
            programState
          }
          ... on FailureStatus {
            blockId
            reason
          }
        }
        witnesses
        receipts {
          a
          b
          amount
          color
          gas
          digest
          id
          is
          pc
          ptr
          ra
          rb
          rc
          rd
          reason
          receiptType
          to
          toAddress
          val
          len
        }
        script
        scriptData
        metadata
        salt
        staticContracts
      }
    }
    pageInfo {
      endCursor
      hasNextPage
      hasPreviousPage
      startCursor
    }
  }
}

