fuel-client/src/client/schema/snapshots/fuel_client__client__schema__tx__tests__transparent_transaction_by_id_query_gql_output.snap
---
source: fuel-client/src/client/schema/tx.rs
expression: operation.query

---
query Query($_0: HexString256!) {
  transaction(id: $_0) {
    gasLimit
    gasPrice
    id
    inputColors
    inputContracts
    inputs {
      __typename
      ... on InputCoin {
        utxoId
        owner
        amount
        color
        witnessIndex
        maturity
        predicate
        predicateData
      }
      ... on InputContract {
        utxoId
        balanceRoot
        stateRoot
        contractId
      }
    }
    isScript
    outputs {
      __typename
      ... on CoinOutput {
        to
        amount
        color
      }
      ... on ContractOutput {
        inputIndex
        balanceRoot
        stateRoot
      }
      ... on WithdrawalOutput {
        to
        amount
        color
      }
      ... on ChangeOutput {
        to
        amount
        color
      }
      ... on VariableOutput {
        to
        amount
        color
      }
      ... on ContractCreated {
        contractId
      }
    }
    maturity
    receiptsRoot
    status {
      __typename
      ... on SubmittedStatus {
        time
      }
      ... on SuccessStatus {
        blockId
        time
        programState
      }
      ... on FailureStatus {
        blockId
        time
        reason
      }
    }
    witnesses
    receipts {
      a
      b
      amount
      color
      gas
      digest
      id
      is
      pc
      ptr
      ra
      rb
      rc
      rd
      reason
      receiptType
      to
      toAddress
      val
      len
      result
      gasUsed
    }
    script
    scriptData
    salt
    staticContracts
    bytecodeWitnessIndex
  }
}

